# pokebrains

./: Cargo.toml  Justfile  README.md  agent_config.toml
src/: agent.rs  ai.rs  client.rs  lib.rs  logs.rs  main.rs  parser.rs  pokeapi.rs  tools.rs
src/api/: agents.rs  dtos.rs  mod.rs  request.rs  tools_registry.rs
src/parser/: logs.rs  mod.rs  team.rs
teams/: GEN_V.txt  GEN_VI.txt
tests/: agent.rs  battle_event.rs  team_parse.rs
