[package]
name = "pokebrains"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pokebrains"
path = "src/bin/main.rs"

[[bin]]
name = "pokefetcher"
path = "src/bin/fetcher.rs"

[lib]
name = "pokebrains"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
reqwest = "0.12.25"
serde = "1.0.228"
futures-util = "0.3"
colored = "3.0.0"
anyhow = "1.0.100"
rig-core = "0.27.0"
xcap = "0.8.0"