[package]
name = "pokebrains"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pokebrains"
path = "src/bin/main.rs"
test = false
doctest = false

[[bin]]
name = "pokefetcher"
path = "src/bin/fetcher.rs"
test = false
doctest = false

[lib]
name = "pokebrains"
path = "src/lib.rs"
doctest = false

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
eventsource-stream = "0.2.3"
reqwest = { version = "0.12.25", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
colored = "3.0.0"
anyhow = "1.0.100"
xcap = "0.8.0"